syntax = "proto3";

package protocol;

// The greeting service definition.
service Haraqa {
  // Sends a message to create a new topic
  rpc CreateTopic (CreateTopicRequest) returns (CreateTopicResponse) {}
  // Sends a message to delete a topic
  rpc DeleteTopic (DeleteTopicRequest) returns (DeleteTopicResponse) {}
  // Sends a message to truncate a topic to a specific point
  rpc TruncateTopic (TruncateTopicRequest) returns (TruncateTopicResponse) {}
  // Sends a message to list all topics
  rpc ListTopics (ListTopicsRequest) returns (ListTopicsResponse) {}
  // Sends a message to get a topics beginning and ending offsets
  rpc Offsets (OffsetRequest) returns (OffsetResponse) {}
}

message Meta {
  bool OK = 1;
  string error_msg = 2;
}

message CreateTopicRequest {
  bytes topic = 1;
}

message CreateTopicResponse {
  Meta meta = 1;
}

message DeleteTopicRequest {
  bytes topic = 1;
}

message DeleteTopicResponse {
  Meta meta = 1;
}

message TruncateTopicRequest {
  bytes topic = 1;
  int64 offset = 2;
}

message TruncateTopicResponse {
  Meta meta = 1;
}

message ListTopicsRequest {
}

message ListTopicsResponse {
  Meta meta = 1;
  repeated bytes topics = 2;
}

// The request message containing the offset info
message OffsetRequest {
  bytes topic = 1;
}

// The response message containing the offset response
message OffsetResponse {
  Meta meta = 1;
  int64 min_offset = 2;
  int64 max_offset = 3;
}
